# v3-bitget-api-sdk

./: .gitignore
bitget-python-sdk-api/: pyproject.toml  reproduce_ws_error_quick.py
bitget-python-sdk-api/bitget/: client.py  utils.py
bitget-python-sdk-api/bitget/ws/: bitget_ws_client.py
